# cake-slayer

./: .travis.yml  CHANGELOG.md  README.md  cabal.project  cake-slayer.cabal  stack.yaml
.github/workflows/: ci.yml
src/: CakeSlayer.hs
src/CakeSlayer/: Db.hs  Error.hs  Has.hs  Jwt.hs  Measure.hs  Monad.hs  Password.hs  Random.hs  Servant.hs  SqlArray.hs  Swagger.hs  Time.hs
test/: Spec.hs
test/Test/: Gen.hs  Jwt.hs  Mock.hs  Password.hs
