cabal-version:       2.4
name:                cake-slayer
version:             0.0.0.0
synopsis:            Architecture of Haskel backend applications
description:         Architecture of Haskel backend applications
homepage:            https://github.com/Holmusk/cake-slayer
bug-reports:         https://github.com/Holmusk/cake-slayer/issues
license:             MPL-2.0
license-file:        LICENSE
author:              Dmitrii Kovanikov, Veronika Romashkina
maintainer:          Holmusk <tech@holmusk.com>
copyright:           2019 Holmusk
category:            Web, Backend, Framework
build-type:          Simple
extra-doc-files:     README.md
                     CHANGELOG.md
tested-with:         GHC == 8.4.4
                     GHC == 8.6.5

source-repository head
  type:                git
  location:            https://github.com/Holmusk/cake-slayer.git

common common-options
  build-depends:       base-noprelude >= 4.10.1.0 && < 4.13
                     , relude ^>= 0.5.0

  ghc-options:         -Wall
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wcompat
                       -Widentities
                       -Wredundant-constraints
                       -fhide-source-paths

  default-language:    Haskell2010
  default-extensions:  ConstraintKinds
                       DeriveAnyClass
                       DeriveFunctor
                       DeriveGeneric
                       DerivingStrategies
                       FlexibleContexts
                       FlexibleInstances
                       GeneralizedNewtypeDeriving
                       InstanceSigs
                       KindSignatures
                       LambdaCase
                       MultiParamTypeClasses
                       OverloadedStrings
                       RecordWildCards
                       ScopedTypeVariables
                       StandaloneDeriving
                       TupleSections
                       TypeApplications
                       ViewPatterns


library
  import:              common-options
  hs-source-dirs:      src
  other-modules:       Prelude
  exposed-modules:     CakeSlayer
                         CakeSlayer.Db
                         CakeSlayer.Error
                         CakeSlayer.Has
                         CakeSlayer.Jwt
                         CakeSlayer.Monad
                         CakeSlayer.Password
                         CakeSlayer.Random

  build-depends:       aeson ^>= 1.4
                     , bcrypt ^>= 0.0.11
                     , containers
                     , elm-street ^>= 0.1.0.2
                     , http-api-data ^>= 0.4
                     , jwt ^>= 0.10.0
                     , mtl ^>= 2.2.2
                     , postgresql-simple ^>= 0.6.2
                     , postgresql-simple-migration ^>= 0.1.14.0
                     , postgresql-simple-named ^>= 0.0.2.0
                     , random ^>= 1.1
                     , resource-pool ^>= 0.2.3.2
                     , scientific ^>= 0.3.6
                     , time >= 1.8 && < 1.10
                     , unliftio-core ^>= 0.1.2.0

test-suite cake-slayer-test
  import:              common-options
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       Prelude
                       Test.Gen
                       Test.Jwt
                       Test.Password

  build-depends:       cake-slayer
                     , bcrypt
                     , hedgehog ^>= 1.0.1
                     , jwt

  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N
