cabal-version:       2.4
name:                cake-slayer
version:             0.0.1.0
synopsis:            Architecture of Haskel backend applications
description:
    The package provides backbone for your Haskell web-application backend.
    See README for more details.
homepage:            https://github.com/kowainik/cake-slayer
bug-reports:         https://github.com/kowainik/cake-slayer/issues
license:             MPL-2.0
license-file:        LICENSE
author:              Dmitrii Kovanikov, Veronika Romashkina
maintainer:          Kowainik <xrom.xkov@gmail.com>
copyright:           2019 Holmusk, 2019-2021 Kowainik
category:            Web, Backend, Framework
build-type:          Simple
extra-doc-files:     README.md
                     CHANGELOG.md
tested-with:         GHC == 8.10.7

source-repository head
  type:                git
  location:            https://github.com/kowainik/cake-slayer.git

common common-options
  build-depends:       base ^>= 4.14
                     , relude ^>= 1.0

  mixins:              base hiding (Prelude)
                     , relude (Relude as Prelude)
                     , relude

  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wredundant-constraints
                       -fhide-source-paths
                       -Wmissing-export-lists
                       -Wpartial-fields
  if impl(ghc >= 8.8)
    ghc-options:       -Wmissing-deriving-strategies
  if impl(ghc >= 8.10)
    ghc-options:       -Wunused-packages
  if impl(ghc >= 9.0)
    ghc-options:       -Winvalid-haddock
  if impl(ghc >= 9.2)
    ghc-options:       -Wredundant-bang-patterns
                       -Woperator-whitespace

  default-language:    Haskell2010
  default-extensions:  ConstraintKinds
                       DeriveAnyClass
                       DeriveFunctor
                       DeriveGeneric
                       DerivingStrategies
                       FlexibleContexts
                       FlexibleInstances
                       GeneralizedNewtypeDeriving
                       InstanceSigs
                       KindSignatures
                       LambdaCase
                       MultiParamTypeClasses
                       OverloadedStrings
                       RecordWildCards
                       ScopedTypeVariables
                       StandaloneDeriving
                       TupleSections
                       TypeApplications
                       ViewPatterns


library
  import:              common-options
  hs-source-dirs:      src
  exposed-modules:     CakeSlayer
                         CakeSlayer.Db
                         CakeSlayer.Error
                         CakeSlayer.Has
                         CakeSlayer.Jwt
                         CakeSlayer.Measure
                         CakeSlayer.Monad
                         CakeSlayer.Password
                         CakeSlayer.Random
                         CakeSlayer.Servant
                         CakeSlayer.SqlArray
                         CakeSlayer.Swagger
                         CakeSlayer.Time

  build-depends:       aeson ^>= 1.5
                     , bcrypt ^>= 0.0.11
                     , containers
                     , ekg-core ^>= 0.1.1.6
                     , elm-street ^>= 0.1.0.2
                     , http-api-data ^>= 0.4
                     , jwt ^>= 0.10.0
                     , mtl ^>= 2.2.2
                     , postgresql-simple ^>= 0.6.2
                     , postgresql-simple-migration ^>= 0.1.14.0
                     , postgresql-simple-named ^>= 0.0.2.0
                     , prometheus-client ^>= 1.1.0
                     , random ^>= 1.2
                     , resource-pool ^>= 0.2.3.2
                     , scientific ^>= 0.3.6
                     , servant ^>= 0.18
                     , servant-server ^>= 0.18
                     , swagger2 ^>= 2.6
                     , time ^>= 1.9
                     , unliftio-core ^>= 0.2
                     , unordered-containers ^>= 0.2.10.0

test-suite cake-slayer-test
  import:              common-options
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       Test.Gen
                       Test.Jwt
                       Test.Mock
                       Test.Password

  build-depends:       cake-slayer
                     , bcrypt
                     , hedgehog ^>= 1.0.1
                     , jwt

  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N
